# telegram-ultra

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  application.py  fix_playlist_advanced.js  fix_smart_playlist.js  normalize_lf.js  requirements.txt  update_playlist.js  updates.txt
.git-rewrite/: backup-refs  commit  message  parse  revs
api/: Cargo.toml
api/src/: auth.rs  main.rs  routes.rs
bot/: Cargo.toml
bot/src/: callback_state.rs  commands.rs  link_detector.rs  main.rs
bot/src/workers/: mod.rs  python_dispatcher.rs
deploy/: hermes-api.service  hermes-bot.service  hermes-pgwiz  hermes-ui.service
docs/: 01-ARCHITECTURE.md  02-BOT.md  03-API.md  04-WORKER-IPC.md
downloader/: Cargo.toml
downloader/src/: main.rs
migrations/: 0001_initial.sql  0002_fix_cache_tables.sql  0003_allow_window_session.sql  0004_symlink_tracking.sql  0005_dedup_system.sql  0005_mtproto_cache.sql  0006_user_preferences_extended.sql
shared/: Cargo.toml
shared/src/: db.rs  errors.rs  ipc_protocol.rs  lib.rs  models.rs  task_queue.rs
ui/: package-lock.json  package.json  server.js
ui/public/: admin.html  dashboard.html  files.html  help.html  login.html  scheduler.html  settings.html
ui/public/assets/: app.js  style.css
worker/: __init__.py  application.py  cache.py  config.py  cookies.py  database.py  error_handlers.py  ipc.py  mtproto_client.py  mtproto_upload.py  playlist_dl.py  playlist_utils.py  progress_hooks.py  repair_service.py  setup_session.py  storage.py  user_manager.py  utils.py  youtube_dl.py  youtube_search.py
