[workspace]
members = [
    "bot",
    "api",
    "downloader",
    "shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hermes Team"]
description = "Hermes Download Nexus - Multi-language Telegram bot system"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Environment
dotenvy = "0.15"

# Telegram bot
teloxide = { version = "0.12", features = ["macros"] }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# JWT
jsonwebtoken = "9"
