[package]
name = "hermes-api"
version.workspace = true
edition.workspace = true

[dependencies]
hermes-shared = { path = "../shared" }

tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
rand = "0.8"
