[package]
name = "hermes-bot"
version.workspace = true
edition.workspace = true

[dependencies]
hermes-shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }

# Telegram bot framework
teloxide = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# UUID for task IDs
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Environment
dotenvy = { workspace = true }

# Regex for link detection
regex = "1"
once_cell = "1"
