[package]
name = "hermes-shared"
version.workspace = true
edition.workspace = true
description = "Shared types, IPC protocol, and database models for Hermes"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
